More footer changes.

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
         {%- else -%}
           {%- assign url = footer_link.url | relative_url -%}
         {%- endif -%}
-        <a class="social-icon" href="{{ url }}"><i class="{{ footer_link.icon | default: 'fas fa-link' }} fa-2x" title="{{ footer_link.title }}"></i></a>
+        <a class="social-icon" href="{{ url }}"><i class="{{ footer_link.icon | default: 'fas fa-link' }}" title="{{ footer_link.title }}"></i></a>
       {%- endfor -%}
     </div>
   {%- endif -%}
@@ -18,7 +18,7 @@
     {% if site.copyright %}
       {{ site.copyright | markdownify }}
     {% else %}
-      <p>&copy; 1997 &ndash; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }} and supporting authors. All material is the property of the original authors and creators and is presented on this site without claim and for novelty purposes only.</p>
+      <p>&copy; 1997 &ndash; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }} and supporting/original authors. All material is presented on this site without claim and for novelty purposes only.</p>
     {% endif %}
   </div>
 </footer>
