--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -3,20 +3,12 @@ layout: page
 ---
 
 {{ content }}
-
-{% assign sorted_tags = site.tags | sort %}
-{% for tag in sorted_tags %}
-  <section id="{{ tag | slugify | downcase }}" class="taxonomy-section">
-    <h2 class="taxonomy-title">{{ tag }}</h2>
-  {% assign posts = tag[1] | sort %}
-
-  {% if posts != empty %}
-    <div class="entries-{{ page.entries_layout | default: 'list' }}">
-    {% for p in posts %}
-      {% include entry.html %}
+<h2>Tags and Posts</h2>
+{% for tag in site.tags %}
+  <h3>{{ tag[0] }}</h3>
+  <ul>
+    {% for post in tag[1] %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
-    </div>
-  {% endif %}
-    <a href="#page-title" class="back-to-top">{{ site.data.text[site.locale].back_to_top | default: 'Back to Top' }} &uarr;</a>
-  </section>
+  </ul>
 {% endfor %}
