--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,11 +11,10 @@ sitemap: false
   display: flex;
   grid-column-gap: 2em;
   grid-template-columns: repeat(2, 1fr);
-  margin: 0;
-  padding: 0;
-  font-family: $base-font-family;
-  font-size: 0.9rem;
-  list-style: none;
+
+  a {
+    border-bottom: none;
+  }
 
   a .fa-tag {
     margin: 0.3em 0.4em 0 0;
