--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,5 +1,4 @@
 ---
-# Only the main Sass file needs front matter (the dashes are enough)
 sitemap: false
 ---
 
@@ -18,5 +17,33 @@ sitemap: false
 
   a .fa-tag {
     margin: 0.3em 0.4em 0 0;
+  }
+}
+
+.page-title {
+  margin-bottom: 0.4em;
+  padding-bottom: 0.1em;
+  border-bottom: 1px dotted;
+}
+
+.page-content {
+
+  .e-content {
+    background-color: #2c313b;
+    padding: 1em 0 1em 1em;
+
+    h2:first-of-type {
+      margin-bottom: 0.5em;
+    }
+
+    h2 + h3 {
+      text-align: right;
+    }
+
+    hr {
+      margin-left: -1em;
+      border-top: 1px dotted;
+      border-bottom: 1px dashed;
+    }
   }
 }
