--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,6 +20,12 @@ sitemap: false
   }
 }
 
+.layout--post {
+  .page-wrapper {
+    grid-column-gap: 2em;
+  }
+}
+
 .page-title {
   margin-bottom: 0.4em;
   padding-bottom: 0.1em;
@@ -30,7 +36,7 @@ sitemap: false
 
   .e-content {
     background-color: #2c313b;
-    padding: 1em 0 1em 1em;
+    padding: 1em;
 
     h2:first-of-type {
       margin-bottom: 0.5em;
@@ -42,6 +48,7 @@ sitemap: false
 
     hr {
       margin-left: -1em;
+      margin-right: -1em;
       border-top: 1px dotted;
       border-bottom: 1px dashed;
     }
