Sidebar layout changes.

--- a/_includes/page-contribute.html
+++ b/_includes/page-contribute.html
@@ -1,6 +1,7 @@
 <h3 class="page-taxonomies-title">Contribute</h3>
   <ul class="page-taxonomies">
     <li class="page-taxonomy">
-      <a href="{{ site.github_repo_file_path_base }}{{ page.path }}" title="Edit this page" rel="tag">Suggest an edit</a>
+      <a href="{{ site.github_repo_file_path_base }}{{ page.path }}" title="Edit content" rel="tag"><i class="far fa-pencil"></i>Edit content</a>
+      <a href="{{ site.github_repo_url }}/issues" title="Comments/Suggestions" rel="tag"><i class="far fa-comments"></i>Comments/Suggestions</a>
     </li>
   </ul>
