More sidebar style changes.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -35,6 +35,10 @@ sitemap: false
 .page-sidebar {
   font-size: 0.9rem;
 
+  a {
+    font-size: 0.8rem;
+  }
+
   .btn {
     padding: 0.4em 0.6em;
   }
